test/spectrum/examples/good/keyword_invoke.clj
(ns checker.good.keyword-invoke)

(:foo {:foo 1})
