test/spectrum/examples/bad/invoke_non_fn.clj
(ns checker.bad.invoke-non-fn)

(def foo 3)

(defn bar []
  (foo 1))
